Full name, address, phone, email, and photo
Adding in the div for the first few bullets of the personal website, which are:

Full name
Address
Phone
Email (with link)
Photo of yourself (can be the same or different from the main page)

--- a/Lab 1/rcsid.html
+++ b/Lab 1/rcsid.html
@@ -6,3 +6,16 @@
     <title>Gavin Liu Web Sys Personal Website!</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
+<body>
+    <header>
+        <h1>[Gavin Liu]</h1>
+        <div class="contact-info">
+            <p>2150 12th Street, Troy, NY 12180</p>
+            <p>Phone: (626)-365-3783</p>
+            <p>Email: <a href="mailto:liug8@rpi.edu">liug8@rpi.edu</a></p>
+        </div>
+        <img src="hero.jpg" alt="Profile Photo" class="profile-photo">
+    </header>
+</body>
+</html></div>
