Adding Objective Statement/Intro
Yep, its still the same as my personal website

--- a/Lab 1/rcsid.html
+++ b/Lab 1/rcsid.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+    <!-- Header Section -->
+    <!-- Full Name, Addy, Phone, Email, and profile pic --> 
     <header>
         <h1>[Gavin Liu]</h1>
         <div class="contact-info">
@@ -17,5 +19,11 @@
         </div>
         <img src="hero.jpg" alt="Profile Photo" class="profile-photo">
     </header>
+
+    <!-- Objective statement/Intro -->
+    <section class="objective">
+        <p>Hi I'm Gavin Liu! I'm a junior in the class of 2026 majoring in Computer Science at Rensselaer Polytechnic Institute. When I'm not LeetCoding, you can catch me playing volleyball, eating ramen, or hanging out with friends across campus. I love learning more about computer science and am always looking for new opportunities to grow my skills.</p>
+    </section>
+
 </body>
-</html></div>
+</html>
