--- a/Lab 1/rcsid.html
+++ b/Lab 1/rcsid.html
@@ -25,5 +25,31 @@
         <p>Hi I'm Gavin Liu! I'm a junior in the class of 2026 majoring in Computer Science at Rensselaer Polytechnic Institute. When I'm not LeetCoding, you can catch me playing volleyball, eating ramen, or hanging out with friends across campus. I love learning more about computer science and am always looking for new opportunities to grow my skills.</p>
     </section>
 
+    <!-- Education Section -->
+    <section class="education">
+        <h2>Education</h2>
+        <div class="education-item">
+            <h3><a href="https://www.rpi.edu" target="_blank" rel="noopener">Rensselaer Polytechnic Institute</a></h3>
+            <p><strong>Bachelor of Science in Computer Science, minor in Information Technology and Web Science</strong></p>
+            <p>2022 - 2026</p>
+            <ul>
+                <li>Senior, Class of 2026</li>
+                <li>Dean's Honor List 2024, Recipient of Rensselaer Leadership Award</li>
+            </ul>
+        </div>
+        
+        <div class="education-item">
+            <h3><a href="https://sites.google.com/avusd.org/apple/home" target="_blank" rel="noopener">Apple Valley High School</a></h3>
+            <p><strong>High School Diploma</strong></p>
+            <p>2021 - 2022</p>
+            <ul>
+                <li>Graduated with a 4.0 GPA</li>
+                <li>CTE Outstanding Student of the Year in Computer Programming</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Work Experience -->
+
 </body>
 </html>
