--- a/Lab 1/rcsid.html
+++ b/Lab 1/rcsid.html
@@ -144,5 +144,19 @@
             </ul>
         </div>
     </section>
+    <!-- Skills Section -->
+    <section class="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>Programming Languages: Python, Java, JavaScript, C, C++, HTML, CSS</li>
+            <li>Frameworks & Libraries: React, Node.js, TailwindCSS</li>
+            <li>Databases: MongoDB, MySQL</li>
+            <li>Tools & Platforms: Git, GitHub, Docker, AWS, Heroku</li>
+            <li>Other Skills: Agile Methodologies, UI/UX Design</li>
+            <li>Languages: English (Fluent), Mandarin (Conversational)</li>
+            <li>Soft Skills: Team Collaboration, Problem-Solving, Communication</li>
+            <li>Github Foundations Certification</li>
+        </ul>
+
 </body>
 </html>
