--- a/Lab 3/index.html
+++ b/Lab 3/index.html
@@ -300,7 +300,7 @@
                 for (const item of pokemonList) {
                     const details = await fetchPokemonDetails(item.pokemon.url);
                     
-                    const spriteUrl = details.sprites.front_default || 'https://via.placeholder.com/96';
+                   const spriteUrl = details.sprites.other?.showdown?.front_default || details.sprites.front_default || 'https://via.placeholder.com/96';
                     const pokemonName = details.name || 'Unknown';
                     
                     const card = $(`
